<resources>
    <string name="app_name">lab_BT</string>

    <string name="action_scan">Scan</string>
    <string name="action_give_key">Give key</string>

    <string name="label_device_name">Device name:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="label_led_state">LED state:</string>
    <string name="label_led_switch">LED switch</string>

    <string name="default_device_name">None</string>
    <string name="default_device_address">00:00:00:00:00:00</string>
    <string name="default_connection_state">Disconnected</string>
    <string name="default_led_state">Off</string>

    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="bluetooth_le_not_supported">BLE not supported.</string>
    <string name="bluetooth_service_not_found">Bluetooth service not found.</string>
    <string name="bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">unknown_device</string>
    <string name="title_activity_create_token">CreateTokenActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_give_key">GiveKeyActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_paired_devices">Paired device</string>
    <string name="button_scan">Scan</string>
    <string name="title_other_devices">Other device</string>
    <string name="scanning">Scanning</string>
    <string name="select_device">Select device</string>
    <string name="action_receive_key">Receive key</string>
</resources>
